--- a/Webpage Project/olivia-newport.css
+++ b/Webpage Project/olivia-newport.css
@@ -1,6 +1,6 @@
 
 html {
-  font-size: 36px;
+  font-size: 9px;
 }
 
 * {
@@ -90,6 +90,7 @@ p {
 }
 
 a:link {
+  color: #000000;
   text-decoration: none;
 }
 
